@@ -5,7 +5,8 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Generic Setup test: use quickinstaller for uninstalling.
+  [jone]
 
 
 1.6.1 (2014-04-29)
